--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
+@layer components {
+  .shadow-center {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12), 0 -2px 2px 0 rgba(0, 0, 0, 0.04);
+  }
+}
