--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,16 @@
   font-family: "Roboto", sans-serif;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
 @layer components {
   .shadow-center {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12), 0 -2px 2px 0 rgba(0, 0, 0, 0.04);
@@ -18,6 +28,31 @@
 
   .bg-color-flashSale {
     background-image: linear-gradient(to right, rgb(238, 108, 14), rgb(255, 198, 0));
+  }
+
+  .bg-primary-sendo {
+    background-color: #ee2624;
+  }
+
+  .bg-topnav {
+    background-color: #d52220;
+  }
+
+  .bg-slate-pr {
+    background-color: #f2f3f4 !important;
+  }
+
+  .scroll-thin {
+    scrollbar-width: thin;
+  }
+
+  .scroll-thin::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+
+  .scroll-thin::-webkit-scrollbar-track-piece {
+    color: #c2d2e4;
   }
 }
 
