--- a/src/assets/css/products.css
+++ b/src/assets/css/products.css
@@ -43,10 +43,10 @@
 }
 
 .product__price-old {
-  flex-grow: 1;
   font-size: 0.8rem;
   margin-left: 8px;
-  line-height: 24px;
+  line-height: 16px;
+  font-size: 11px;
   text-decoration: line-through;
   color: var(--text-color);
   opacity: 0.6;
@@ -61,7 +61,7 @@
 .product__action {
   display: flex;
   justify-content: space-between;
-  margin: 2px 10px 0px 6px;
+  margin: 0px 10px 0px 6px;
   color: var(--text-color);
 }
 
@@ -86,7 +86,7 @@
   margin: 4px 10px 4px;
   font-size: 0.7rem;
   color: var(--text-color);
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 .product__favourite {
